# TE-Infer-SSA

./: .gitignore  ChangeLog.md  README.md  lambdaC.cabal  out.dot  pfc.cabal  stack.yaml  test.lc  test.pfc  test.txt
src/: BasicBlock.hs  Converter.hs  Dominance.hs  Effect.hs  Lexer.x  Main.hs  Parser.y  SingleAssignment.hs
src/Lambda/: Calculus.hs  Inference.hs  Lexer.x  Parser.y
